# Backpack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ReadMe.md  experiment.md
.github/workflows/: ci.yml
docs/: algorithms-details.md  requirements.md
docs/architecture/: architecture-components.md  architecture.md
docs/experiments/: experiment_ubuntu.md  experiments_macOS.md  experiments_windows.md
docs/experiments/linux/: experiment.md
docs/experiments/macOS/: experiment.md
docs/experiments/windows/: experiment.md
experimentator/: Cargo.toml  README.md  experiment.json  experiments.json
experimentator/src/: lib.rs  main.rs
experimentator/src/data/: config_manager.rs  manager.rs  mod.rs
experimentator/src/metrics_service/: bencher.rs  data_collector.rs  metrics_service.rs  mod.rs  reporter.rs
experimentator/src/metrics_service/models/: measurement.rs  metrics_data.rs  mod.rs  time_stats.rs
experimentator/src/models/: experiment_config.rs
experimentator/src/tests/data/: config_manager_tests.rs  manager_tests.rs
experimentator/src/tests/metrics_service/: bencher_tests.rs  metrics_service_tests.rs  mod.rs  reporter_tests.rs
knapsack_library/: Cargo.toml  README.md
knapsack_library/src/: algorithms_api.rs  algorithms_service.rs  lib.rs  main.rs
knapsack_library/src/algorithms_impls/: FPTAS.rs  branch_Bound.rs  dynamic.rs  full_iteration_with_bit_mask.rs  full_iteration_with_recursion.rs  greedy.rs  (+4 more)
metrics_service/: Cargo.toml  test_log.txt
metrics_service/src/: lib.rs  logger.rs  main.rs  metrics_service.rs
src/: main.rs
(+15 files in other folders)
