[package]
name = "experimentator"
version = "0.1.0"
edition = "2021"

[dependencies]
knapsack_library = { path = "../knapsack_library" }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.16.0"
jemallocator = "0.5.4"
jemalloc-sys = "0.5.4"
jemalloc-ctl = "0.5.4"
libc = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
gnuplot ="0.0.41"
walkdir = "2"

[[bench]]
name = "b"
harness = false

[profile.release]
debug = true 